merul_Dev/src/objects/Tabs_system__c.object
<CustomObject>
    <fields>
        <fullName>Key_prefix__c</fullName>
        <label>Key prefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>api_name__c</fullName>
        <label>api_name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>keep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>keep</label>
        <type>Checkbox</type>
    </fields>
    <label>Tabs system</label>
    <nameField>
        <label>Tabs system Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tabs systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>